tests/specs/ecosystem/bureaudouble_forks/react_remove_scroll/0_0_2.test
bureaudouble-forks/react-remove-scroll/0.0.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:react@^18.2.0": "npm:react@18.3.1"
    },
    "npm": {
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  ref?: Ref<HTMLElement>;
            ~~~~~~~~~~~
    at file://<tmpdir>/src/types.tsx:26:13

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  shards?: Array<React.RefObject<any> | HTMLElement>;
                                        ~~~~~~~~~~~
    at file://<tmpdir>/src/types.tsx:57:41

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
type RefForwarded<T,> = ForwardRefExoticComponent<T & RefAttributes<HTMLElement>> & WithClassNames;
                                                                    ~~~~~~~~~~~
    at file://<tmpdir>/src/types.tsx:79:69

Found 3 errors.

error: Type checking failed.

